# psicli

./: .gitignore  README.md  pyproject.toml
docs/: prosi-cli.html
psicli/: __init__.py  auth.py  cli.py  launch.py
tests/: test_launch.py
